<resources>
    <string name="app_name">ARHomeImprovement</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign In</string>
    <string name="login_bkgd">login_bkgd</string>
    <string name="create_account">Create Account</string>
    <string name="create_account_label">Create Account</string>
    <string name="sign_in_label">Sign In</string>
    <string name="cancel_button_string">Cancel</string>
    <string name="password_text">Password:</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="background_trans_img">Background Effect</string>
    <string name="small_logo">Small Logo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_message">What Would You Like to Do?</string>
    <string name="back_button">Back Button</string>
    <string name="scan_furniture_for_ar">Scan Furniture via AR</string>
    <string name="create_a_room_layout">Create a Room Layout</string>
    <string name="view_saved_rooms">View Saved Rooms</string>
    <string name="account_page_text">Account Page</string>
    <string name="help_button_text">Need Help?</string>
    <string name="scan_button">Scan It!</string>
    <string name="cancel_menu">Cancel</string>
    <string name="save_scanned_image">Save Scanned Image</string>
    <string name="save_heading_dialog">Save Furniture As?</string>
    <string name="save_dialog">Save</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="select_from_saved_string">Place Furniture</string>
    <string name="remove_furniture_string">Remove Furniture</string>
    <string name="room_creation_item_1">Item 1</string>
    <string name="room_creation_item_2">Item 2</string>
    <string name="room_creation_item_3">Item 3</string>
    <string name="room_creation_item_4">Item 4</string>
    <string name="view_saved_furniture_string">List Saved Room\'s Furniture</string>
    <string name="delete_saved_room">Delete Saved Room</string>
    <string name="room_1">Room 1</string>
    <string name="room_2">Room 2</string>
    <string name="room_3">Room 3</string>
    <string name="room_4">Room 4</string>
    <string name="change_password">Change Password</string>
    <string name="name">Name</string>
    <string name="username">Username:</string>
    <string name="help_hint">Type Your Problem Here</string>
    <string name="create_account_string">Create Account</string>
    <string name="cancel_string">Cancel</string>
    <string name="email_hint">Email Address</string>
    <string name="current_password_hint">Current Password</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_new_password_hint">Confirm New Password</string>
    <string name="camera_screen_pic">camera_screen_pic</string>
    <string name="couch_pic">couch_pic</string>
    <string name="create_room_room_pic">create_room_room_pic</string>
    <string name="couch">Couch</string>
</resources>
