<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7F97B3"
    tools:context=".home_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/help_button"
            android:layout_width="225dp"
            android:layout_height="52.5dp"
            android:background="@drawable/ripple"
            android:textColor="#FFFFFFFF"
            android:text="@string/help_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.932" />

        <Button
            android:id="@+id/account_page_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:background="@drawable/ripple"
            android:padding="10dp"
            android:text="@string/account_page_text"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias=".726" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="633dp"
            android:layout_height="69dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#FFFFFFFF"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="251dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:text="@string/hello_message"
            android:textIsSelectable="false"
            android:textSize="36sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.164" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="92dp"
            android:layout_height="72dp"
            android:contentDescription="@string/small_logo"
            android:src="@drawable/blackwhitelogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/scan_furniture_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:background="@drawable/ripple"
            android:padding="10dp"
            android:text="@string/scan_furniture_for_ar"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.360" />

        <Button
            android:id="@+id/room_layout_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:background="@drawable/ripple"
            android:padding="10dp"
            android:text="@string/create_a_room_layout"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.482" />

        <Button
            android:id="@+id/saved_rooms_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:background="@drawable/ripple"
            android:padding="10dp"
            android:text="@string/view_saved_rooms"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.604" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>