<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7F97B3"
    tools:context=".SignInFragment">

    <Button
        android:id="@+id/sign_in_cancel_button"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/cancel_button_string"
        android:textSize="18sp"
        android:background="@drawable/ripple"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_confirm"
        app:layout_constraintVertical_bias="0.067" />

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#7F97B3"
        android:textColorHint="#7F97B3"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285" />

    <EditText
        android:id="@+id/editText2"
        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox.Dense"
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#7F97B3"
        android:textColorHint="#7F97B3"
        android:typeface="normal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.729" />

    <Button
        android:id="@+id/sign_in_confirm"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:text="@string/sign_in"
        android:textSize="18sp"
        android:background="@drawable/ripple"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.535" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="198dp"
        android:alpha=".70"
        android:contentDescription="@string/small_logo"
        android:src="@drawable/blackwhitelogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.969" />

</androidx.constraintlayout.widget.ConstraintLayout>