<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".create_room"
    android:background="#7F97B3">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/create_room_camera"
            android:layout_width="790dp"
            android:layout_height="658dp"
            android:layout_marginTop="142dp"
            android:layout_marginBottom="142dp"
            android:contentDescription="@string/create_room_room_pic"
            android:src="@drawable/room2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.909" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="633dp"
            android:layout_height="69dp"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:textColor="#FFFFFFFF"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="60dp"
            android:layout_height="44dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:src="?attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="92dp"
            android:layout_height="72dp"
            android:contentDescription="@string/small_logo"
            android:src="@drawable/blackwhitelogo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/select_saved_furniture_button"
            android:layout_width="333dp"
            android:layout_height="42dp"
            android:background="@drawable/ripple"
            android:text="@string/select_from_saved_string"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.85" />

        <Button
            android:id="@+id/remove_furniture_button"
            android:layout_width="333dp"
            android:layout_height="42dp"
            android:background="@drawable/ripple"
            android:text="@string/remove_furniture_string"
            android:textColor="#FFFFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.931" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:id="@+id/couch_create_pic"
        android:layout_width="263dp"
        android:layout_height="119dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="293dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="319dp"
        android:contentDescription="@string/couch_pic"
        android:src="@drawable/couch_clipart_safa_3_transparent"
        android:visibility="invisible"
/>
</RelativeLayout>